# ezwebsocket

./: .gitignore  AUTHORS  COPYING  LICENSE  Makefile.am  NEWS  README.md  cleanup.sh  configure.ac  meson.build  meson_options.txt
inc/: Makefile.am  meson.build  websocket.h
src/: Makefile.am  meson.build  websocket.c
src/socket_client/: socket_client.c  socket_client.h
src/socket_server/: socket_server.c  socket_server.h
src/utils/: base64.c  base64.h  dyn_buffer.c  dyn_buffer.h  log.c  log.h  ref_count.c  ref_count.h  stringck.c  stringck.h  utf8.c  utf8.h
tests/: client_autobahn.c  meson.build  run_autobahn_client_test.sh  run_autobahn_server_test.sh  server_autobahn.c  server_autobahn_legacy.c
tests/config/: fuzzingclient.json
