# Common options, automatically inherited by subprojects

option('openssl', type : 'feature', value : 'disabled', description : 'Enable Openssl support for Secure Websockets')
option('debug', type : 'boolean', value : 'false', description : 'Enable Debug output')
option('examples', type : 'feature', value : 'enabled', description : 'Build examples')


